syntax = "proto3";

package notification_service;

option go_package = "proto/notification";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
  string email = 1;
  string subject = 2;
  string message = 3;
}

message SendNotificationResponse {
  string status = 1;
}
